[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/war.png" type="Texture" id=1]
[ext_resource path="res://war_enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/attack.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1

[sub_resource type="CapsuleShape2D" id=4]
radius = 23.0
height = 200.0

[sub_resource type="Curve" id=5]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
angle_curve = SubResource( 6 )
scale = 8.0
scale_random = 1.0
scale_curve = SubResource( 8 )
color = Color( 1, 0.819608, 0, 1 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 25.0
height = 200.0

[node name="WarEnemy" type="KinematicBody2D" groups=[
"enemies",
"war",
]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 140.0
margin_top = 662.0
margin_right = 1140.0
margin_bottom = 682.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -63.3783, 0 )
amount = 30
local_coords = false
process_material = SubResource( 9 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
shape = SubResource( 10 )

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
